--- a/layout.html
+++ b/layout.html
@@ -10,15 +10,18 @@
         <h1>RPS Game</h1>
     </header>
     <main>
-        <div>
+        <div class = "choices">
             <p id = "humanChoice"> Your Choice: </p>
-            <p>Computer's Choice: </p>
+            <p id = "computerChoice">Computer's Choice: </p>
+            <p id = "yourScore"> Your Score: </p>
+            <p id = "computerScore"> Computer's Score:</p>
         </div>
         <div>
-            <button onclick= "humanPlay('rock') ; game()">Rock</button>
-            <button onclick= "humanPlay('paper'); game()">Paper</button>
-            <button onclick= "humanPlay('scissor'); game()">Scissor</button>
+            <input type = "button" value = "rock"></input>
+            <input type = "button" value = "paper"></input>
+            <input type = "button" value = "scissor"></input>
         </div>
+        <div id = "result"></div>
     </main>
 </body>
 <script src = "core.js"> </script>
